# advent_of_code_2023

./: .gitignore  Cargo.toml  README.md  bash.sh
inputs/: day-24.txt
src/: lib.rs  main.rs
src/utils/: mod.rs  numbers.rs
