[package]
name = "aoc_2023_lib"
version = "0.1.0"
edition = "2021"
author = "NGUYEN KY TRI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints.rust]
unused = "allow"

[dependencies]
aho-corasick = "1.1.2"
itertools = "0.12.0"
once_cell = "1.18.0"
pathfinding = "4.7.0"
regex = "1.10.2"
